--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Taha Rostami
+title: Sara Rostami
 
 collections:
   publications:
@@ -7,9 +7,9 @@ collections:
      output: true
   
 author:
-  name: TahaRostami
-  email: taha.rostami.darunkola@gmail.com
-description: Personal website of Taha Rostami
+  name: SaraRostami
+  email: sararostami.d98@gmail.com
+description: Personal website of Sara Rostami
 
 show_excerpts: true
 
